about page created

--- a/Assignment 2/templates/contact.html
+++ b/Assignment 2/templates/contact.html
@@ -1,8 +1,8 @@
 {% extends "home.html" %}
 {% block title %} Contact Me - CN {% endblock %}
 {% block content %}
-    <img class="img-responsive mx-auto d-block" src="../static/images/contact-128.png">
-    <br>
+    <img class="img-responsive mx-auto d-block" src="/static/images/contact-128.png">
+    <div class="text-center display-4">Contact Me</div>
     <div class="container-md mx-auto d-block">
         <form class="form-responsive">
             <div class="row">
