--- a/Assignment 2/templates/project.html
+++ b/Assignment 2/templates/project.html
@@ -3,8 +3,8 @@
 {% block content %}
     <img class="img-responsive mx-auto d-block" src="/static/images/github.png">
     <div class="container-md mx-auto d-block">
-        <div class="alert alert-info mx-auto d-block bg-light text-center">
-             <strong> <img src="/static/images/repo-blue.png" class="img-responsive">Click here </strong> to visit
+        <div class="alert alert-info bg-light text-center mx-auto d-block">
+            <strong> <img src="/static/images/repo-blue.png" class="img-responsive">Click here </strong> to visit
             my <a href="https://github.com/chelsieng?tab=repositories" class="alert-link">git repository!</a>
         </div>
     </div>
