Responsive templates adjusted

--- a/Assignment 2/templates/about.html
+++ b/Assignment 2/templates/about.html
@@ -1,13 +1,13 @@
 {% extends "home.html" %}
 {% block title %} Contact Me - CN {% endblock %}
 {% block content %}
-    <div class="container-md mx-auto d-block">
-        </br>
+    <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/info-64.png"> About</div>
         </br>
-        <div class="container-md mx-auto d-block bg-light">
-            <p class="lead">Hello there!</p>
-            <p class="lead">First of all, thank you for passing by. I hope this website finds you well. </p>
+        <div class="container-lg mx-auto d-block bg-light">
+            <p class="lead text-justify">Hello there!</p>
+            <p class="lead text-justify">First of all, thank you for passing by. I hope this website finds you
+                well. </p>
             <p class="lead text-justify">The main aim of my website was to promote myself, build and control my personal
                 brand. But in reality, I want
                 to
@@ -21,7 +21,8 @@
                 have
                 the freedom to be
                 creative and control your <strong>own</strong> brand.</p>
-            <p class="lead">All the best,<br>Chelsie</p>
+            <p class="lead text-justify">All the best,</p>
+            <p class="lead text-justify">Chelsie</p>
         </div>
     </div>
 
