--- a/Assignment 2/templates/project.html
+++ b/Assignment 2/templates/project.html
@@ -1,11 +1,14 @@
 {% extends "home.html" %}
 {% block title %} Project - CN {% endblock %}
 {% block content %}
-    <img class="img-responsive mx-auto d-block" src="/static/images/github.png">
-    <div class="container-md mx-auto d-block">
-        <div class="alert alert-info bg-light text-center mx-auto d-block">
+    <div class="container-fluid mx-auto d-block pt-5 pb-2">
+        <img class="img-expand-lg mx-auto d-block" style="width: 40%" src="/static/images/github-512.png">
+    </div>
+    <div class="container mx-auto d-block" style="width: auto">
+        <div class="alert alert-info bg-light text-center">
             <strong> <img src="/static/images/repo-blue.png" class="img-responsive">Click here </strong> to visit
-            my <a href="https://github.com/chelsieng?tab=repositories" class="alert-link">git repository!</a>
+            my <a href="https://github.com/chelsieng?tab=repositories" class="alert-link">git repositories!</a>
         </div>
+    </div>
     </div>
 {% endblock %}
