--- a/Assignment 2/templates/contact.html
+++ b/Assignment 2/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends "home.html" %}
 {% block title %} Contact Me - CN {% endblock %}
 {% block content %}
-    <img class="img-responsive mx-auto d-block" src="/static/images/contact-128.png">
-    <div class="text-center display-4">Contact Me</div>
-    <div class="container-md mx-auto d-block">
+    <div class="container-lg pt-3 pb-5 mx-auto d-block">
+        <img class="img-responsive mx-auto d-block" src="/static/images/contact-128.png">
+        <div class="text-center display-4">Contact Me</div>
         <form class="form-responsive">
             <div class="row">
                 <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
@@ -19,6 +19,7 @@
             <button type="submit" class="btn btn-dark mx-auto d-block"> Send</button>
         </form>
     </div>
+
 
 {% endblock %}
 
