Media template done

--- a/Assignment 2/templates/about.html
+++ b/Assignment 2/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "home.html" %}
-{% block title %} Contact Me - CN {% endblock %}
+{% block title %} About - CN {% endblock %}
 {% block content %}
     <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/info-64.png"> About</div>
