--- a/Assignment 2/templates/home.html
+++ b/Assignment 2/templates/home.html
@@ -75,7 +75,7 @@
                     <a class="nav-link" href="/project">PROJECTS</a> <!-- Add link -->
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="">MEDIA</a> <!-- Add link -->
+                    <a class="nav-link" href="/media">MEDIA</a> <!-- Add link -->
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="/about">ABOUT</a> <!-- Add link -->
