How can I make your day? page done

--- a/Assignment 2/templates/media.html
+++ b/Assignment 2/templates/media.html
@@ -3,16 +3,16 @@
 {% block content %}
     <div class="container pt-4 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/media.png"> Albums</div>
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
-                <a class="nav-link text-dark lead" data-toggle="tab" href="#photos">Photos</a>
+                <a class="nav-link active text-dark lead" data-toggle="tab" href="#photos">Photos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark lead" data-toggle="tab" href="#videos">Videos</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane container fade" id="photos">
+            <div class="tab-pane container fade show active" id="photos">
                 <div class="table-responsive-lg">
                     <table class="table">
                         <tr>
