--- a/Assignment 2/templates/project.html
+++ b/Assignment 2/templates/project.html
@@ -1,8 +1,9 @@
 {% extends "home.html" %}
 {% block title %} Project - CN {% endblock %}
 {% block content %}
-    <div class="container-fluid mx-auto d-block pt-5 pb-2">
-        <img class="img-expand-lg mx-auto d-block" style="width: 40%" src="/static/images/github-512.png">
+    <div class="container-fluid mx-auto d-block pt-5">
+        <div class="display-4 text-center">GitHub Profile</div>
+        <img class="img-expand-lg mx-auto d-block" style="width: 35%" src="/static/images/github-512.png">
     </div>
     <div class="container mx-auto d-block" style="width: auto">
         <div class="alert alert-info bg-light text-center">
