--- a/Assignment 2/templates/home.html
+++ b/Assignment 2/templates/home.html
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav nav-fill w-100">
                 <li class="nav-item">
-                    <a class="nav-link" href="">HOW CAN I MAKE YOUR DAY?</a> <!-- Add link -->
+                    <a class="nav-link" href="/makeYourDay">HOW CAN I MAKE YOUR DAY?</a> <!-- Add link -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/project">PROJECTS</a> <!-- Add link -->
