make your day section improved

--- a/Assignment 2/templates/about.html
+++ b/Assignment 2/templates/about.html
@@ -4,7 +4,7 @@
     <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/info-64.png"> About</div>
         </br>
-        <div class="container-lg mx-auto d-block bg-light">
+        <div class="container-lg mx-auto d-block bg-whitegit">
             <p class="lead text-justify">Hello there!</p>
             <p class="lead text-justify">First of all, thank you for passing by. I hope this website finds you
                 well. </p>
