--- a/Assignment 2/templates/media.html
+++ b/Assignment 2/templates/media.html
@@ -1,7 +1,7 @@
 {% extends "home.html" %}
 {% block title %} Media - CN {% endblock %}
 {% block content %}
-    <div class="container pt-4 container-lg mx-auto d-block">
+    <div class="container py-5 container-lg mx-auto d-block">
         <div class="display-3 text-center"><img class="img-responsive" src="/static/images/media.png"> Albums</div>
         <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
@@ -12,7 +12,7 @@
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane container fade show active" id="photos">
+            <div class="tab-pane bg-white fade show active" id="photos">
                 <div class="table-responsive-lg">
                     <table class="table">
                         <tr>
@@ -41,7 +41,7 @@
                     </table>
                 </div>
             </div>
-            <div class="tab-pane container fade" id="videos">
+            <div class="tab-pane bg-white gitfade" id="videos">
                 <div class="table-responsive-lg">
                     <table class="table">
                         <tr>
