media section improved

--- a/Assignment 2/templates/media.html
+++ b/Assignment 2/templates/media.html
@@ -45,9 +45,21 @@
                 <div class="table-responsive-lg">
                     <table class="table">
                         <tr>
-                            <td>Vid 1</td>
-                            <td>Vid 2</td>
-                            <td>Vid 3</td>
+                            <td>
+                                <object width="315" height="315"
+                                        data="https://www.youtube.com/embed/U86RzKvOUxc">
+                                </object>
+                            </td>
+                            <td>
+                                <object width="315" height="315"
+                                        data="https://www.youtube.com/embed/U86RzKvOUxc">
+                                </object>
+                            </td>
+                            <td>
+                                <object width="315" height="315"
+                                        data="https://www.youtube.com/embed/U86RzKvOUxc">
+                                </object>
+                            </td>
                         </tr>
                         <tr>
                             <td>Vid 4</td>
