--- a/Assignment 2/templates/media.html
+++ b/Assignment 2/templates/media.html
@@ -24,9 +24,12 @@
                                                                            src="/static/images/IMG_7262.JPG"></a></td>
                         </tr>
                         <tr>
-                            <td>Pic 4</td>
-                            <td>Pic 5</td>
-                            <td>Pic 6</td>
+                            <td><a href="/static/images/IMG_7262.JPG"><img class="img-fluid img-thumbnail"
+                                                                           src="/static/images/IMG_7260.JPG"></a></td>
+                            <td><a href="/static/images/IMG_7262.JPG"><img class="img-fluid img-thumbnail"
+                                                                           src="/static/images/IMG_7260.JPG"></a></td>
+                            <td><a href="/static/images/IMG_7262.JPG"><img class="img-fluid img-thumbnail"
+                                                                           src="/static/images/IMG_7260.JPG"></a></td>
                         </tr>
                         <tr>
                             <td>Pic 7</td>
@@ -46,17 +49,17 @@
                     <table class="table">
                         <tr>
                             <td>
-                                <object width="315" height="315"
+                                <object class="embed-responsive " width="315" height="315"
                                         data="https://www.youtube.com/embed/U86RzKvOUxc">
                                 </object>
                             </td>
                             <td>
-                                <object width="315" height="315"
+                                <object class="embed-responsive " width="315" height="315"
                                         data="https://www.youtube.com/embed/U86RzKvOUxc">
                                 </object>
                             </td>
                             <td>
-                                <object width="315" height="315"
+                                <object class="embed-responsive " width="315" height="315"
                                         data="https://www.youtube.com/embed/U86RzKvOUxc">
                                 </object>
                             </td>
