--- a/Assignment 2/templates/home.html
+++ b/Assignment 2/templates/home.html
@@ -6,8 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Home Page - CN{% endblock %}</title>
         {#        <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-512.png">#}
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename ='stylesheet.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
               integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+              integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
               crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
                 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -20,41 +24,9 @@
                 crossorigin="anonymous"></script>
         {% block custom %}
             <style>
-                body {
-                    padding-top: 5%;
-                    padding-bottom: 5%;
-                    font-family: "Helvetica Neue", "Arial", "sans-serif";
-                    background-image: url("../static/images/background.jpg");
-                    background-size: cover;
-                }
-
-                .navbar {
-                    background: linear-gradient(to top right, #FF6037 0%, #FFCC33 100%);
-                }
-
-                .navbar-brand {
-                    color: white;
-                    font-family: "Avenir Next", "Helvetica Neue", "Verdana";
-                }
-
-                .nav-link {
-                    color: white;
-                    font-family: "Avenir Next", "Helvetica Neue", "Verdana";
-                }
-
-                .nav-item:hover .nav-link {
-                    color: #736A62;
-                    /*color: black;*/
-                }
-
-                .navbar-brand:hover {
-                    /*color: #C8C8CD;*/
-                    color: #736A62;
-                }
-
-                .navbar-toggler-icon {
-                    color: black;
-                }
+            body{
+                font-family: "Helvetica Neue", "Arial", "sans-serif";
+            }
             </style>
         {% endblock %}
     {% endblock %}
@@ -69,19 +41,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav nav-fill w-100">
                 <li class="nav-item">
-                    <a class="nav-link" href="/makeYourDay">HOW CAN I MAKE YOUR DAY?</a> <!-- Add link -->
+                    <a class="nav-link" href="/makeYourDay">HOW CAN I MAKE YOUR DAY?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/project">PROJECTS</a> <!-- Add link -->
+                    <a class="nav-link" href="/project">PROJECTS</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/media">MEDIA</a> <!-- Add link -->
+                    <a class="nav-link" href="/media">MEDIA</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/about">ABOUT</a> <!-- Add link -->
+                    <a class="nav-link" href="/about">ABOUT</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/contact">CONTACT ME</a> <!-- Add link -->
+                    <a class="nav-link" href="/contact">CONTACT ME</a>
                 </li>
             </ul>
         </div>
@@ -89,11 +61,23 @@
 {% endblock %}
 
 {% block content %}
-    <div class="table-responsive">
-        <table class="table-bordered">
-
-        </table>
+    <style>
+        body {
+            padding-bottom: 10%;
+            background-image: url("/static/images/IMG_8226.jpeg");
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: white;
+        }
+    </style>
+    <div class="container-lg">
+    <br>
+        <p class="display-3 text-center"> Welcome, I'm Chelsie!</p>
+        <p class="lead text-center"> <i class="fas fa-birthday-cake"></i> Born on December 18th, 1999</p>
+        <p class="lead text-center"><i class="fas fa-university"></i> Student at Concordia University</p>
     </div>
+
 {% endblock %}
 
 {% block navbarFooter %}
