--- a/Chelsie's Website/templates/home.html
+++ b/Chelsie's Website/templates/home.html
@@ -24,9 +24,9 @@
                 crossorigin="anonymous"></script>
         {% block custom %}
             <style>
-            body{
-                font-family: "Helvetica Neue", "Arial", "sans-serif";
-            }
+                body {
+                    font-family: "Helvetica Neue", "Arial", "sans-serif";
+                }
             </style>
         {% endblock %}
     {% endblock %}
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav nav-fill w-100">
                 <li class="nav-item">
-                    <a class="nav-link" href="/makeYourDay">HOW CAN I MAKE YOUR DAY?</a>
+                    <a class="nav-link" href="/makeyourday">HOW CAN I MAKE YOUR DAY?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/project">PROJECTS</a>
@@ -63,6 +63,7 @@
 {% block content %}
     <style>
         body {
+            padding-top: 10%;
             padding-bottom: 10%;
             background-image: url("/static/images/IMG_8226.jpeg");
             background-position: center center;
@@ -72,9 +73,8 @@
         }
     </style>
     <div class="container-lg">
-    <br>
         <p class="display-3 text-center"> Welcome, I'm Chelsie!</p>
-        <p class="lead text-center"> <i class="fas fa-birthday-cake"></i> Born on December 18th, 1999</p>
+        <p class="lead text-center"><i class="fas fa-birthday-cake"></i> Born on December 18th, 1999</p>
         <p class="lead text-center"><i class="fas fa-university"></i> Student at Concordia University</p>
     </div>
 
