--- a/Chelsie's Website/templates/contact.html
+++ b/Chelsie's Website/templates/contact.html
@@ -2,6 +2,7 @@
 {% block title %} Contact Me - CN {% endblock %}
 {% block content %}
     <div class="container-lg pt-3 pb-5 mx-auto d-block">
+
         <img class="img-responsive mx-auto d-block" src="/static/images/contact-128.png">
         <div class="text-center display-4">Contact Me</div>
         <form class="form-responsive" action="#" method="post">
@@ -9,14 +10,19 @@
                 <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
             </div>
             <div class="row">
-                <input type="text" class="form-control" id="email" placeholder="Enter email" name="email" required>
+                <input type="text" class="form-control" id="email" placeholder="Enter email" name="email"
+                       onchange="validateEmail()" required>
+                <div class="invalid-feedback">Warning! Email entered invalid.</div>
             </div>
+
             <div class="row">
                 <textarea class="form-control" rows="10" id="message" placeholder="Enter message" name="message"
                           required></textarea>
             </div>
             <br>
-            <button type="submit" value="submit" class="btn btn-dark mx-auto d-block"> Send</button>
+            <button type="submit" id="submit" value="submit" class="btn btn-dark mx-auto d-block" disabled> Send
+            </button>
+
         </form>
     </div>
 {% endblock %}
