--- a/Chelsie's Website/templates/learnMoreAboutMe.html
+++ b/Chelsie's Website/templates/learnMoreAboutMe.html
@@ -2,9 +2,9 @@
 {% block title %} More About Me - CN {% endblock %}
 {% block content %}
     <div class="container py-5 container-lg mx-auto d-block">
-        <h1 class="font-weight-lighter text-reset text-center "><span class="badge badge-light"><i
+        <h1 class="font-weight-lighter text-reset text-center"><a href="/static/Resume_ChelsieNgManKing.pdf" target="_blank"><span class="badge badge-light"><i
                 class="fas fa-download"></i>
-            Download Resume</span></h1>
+            Download Resume</span></a></h1><br>
         <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
                 <a class="nav-link active text-dark lead" data-toggle="tab" href="#education">Education</a>
@@ -16,7 +16,7 @@
         <div class="tab-content">
             <div class="tab-pane bg-white fade show active" id="education">
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/concordia.jpg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">Concordia University</h4>
                         <div class="container rounded bg-light">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/LCC.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">Lower Canada College</h4>
                         <div class="container rounded bg-light">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/user.png" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">Ebene State Secondary School</h4>
                         <div class="container rounded bg-light">
@@ -55,7 +55,7 @@
             </div>
             <div class="tab-pane bg-white gitfade" id="work">
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/td.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">TD Auto Finance</h4>
                         <div class="container rounded bg-light">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/exo.jpeg" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">Exo</h4>
                         <div class="container rounded bg-light">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/wize.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
                         <h4 class="lead">Wize</h4>
                         <div class="container rounded bg-light">
@@ -104,14 +104,14 @@
                     </div>
                 </div>
                 <div class="media border p-3">
-                    <img src="/static/images/user.png" class="mr-3 mt-3">
+                    <img src="/static/images/YMCA.png" height="48" width="48" class="rounded mr-3">
                     <div class="media-body">
-                        <h4 class="lead">YMCA</h4>
+                        <h4 class="lead">YMCA of Quebec</h4>
                         <div class="container rounded bg-light">
                             <p>Volunteer Tutor</p>
                             <ul>
                                 <li>Taught mathematics to 16-year-old youths twice a week</li>
-                                <li>Guided them through homework and instant problem-solving questions</li>
+                                <li>Guided them through homeworks and instant problem-solving questions</li>
                             </ul>
                         </div>
                     </div>
