--- a/Chelsie's Website/templates/home.html
+++ b/Chelsie's Website/templates/home.html
@@ -56,6 +56,9 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="/contact">CONTACT ME</a>
                 </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/login"><i class="fas fa-user-plus"></i> LOG IN</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -74,7 +77,7 @@
         }
     </style>
     <div class="container-lg mx-auto d-block">
-        <p class="display-3 text-center"> Welcome, I'm Chelsie!</p>
+        <p class="display-4 text-center"> Welcome, I'm Chelsie!</p>
         <p class="lead text-center"><i class="fas fa-birthday-cake"></i> Born on December 18th, 1999</p>
         <p class="lead text-center"><i class="fas fa-university"></i> Student at Concordia University</p>
         <p class="lead text-center text-decoration-none"><i
